@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Added a new plugin, DROLSKY::Git::CheckFor::CorrectBranch. This plugin only
+  checks that the branch is correct on non-TRIAL releases.
+
+
 0.39     2015-11-24
 
 - Added a use_github_homepage config option.
